# sea-orm-timescale

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
src/: functions.rs  lib.rs  migration.rs  types.rs
tests/: e2e_test.rs  functions_test.rs
