[package]
name = "sea-orm-timescale"
version = "0.2.0"
edition = "2024"
description = "TimescaleDB extension for Sea-ORM: time_bucket, hypertables, compression, continuous aggregates"
license = "MIT"
repository = "https://github.com/evanjt/sea-orm-timescale"
keywords = ["sea-orm", "timescaledb", "time-series", "postgresql"]
categories = ["database"]

[dependencies]
sea-orm = { version = "1.1.19", default-features = false }
sea-query = "0.32"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
